# LiberTEM-schema

./: README.md  pyproject.toml  test_requirements.txt
.github/workflows/: ci.yml
prototypes/: testbed.ipynb
src/libertem_schema/: __init__.py
tests/: test_schemas.py
